<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="P_StationSteering" Id="{312dda99-063e-4bac-86c6-e24e72381b4d}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_StationSteering
VAR
	_station:					REFERENCE TO ST_SystemStation;
	
	_arrTemp:					ARRAY[0..10] OF BOOL;
	_bEnable: 					BOOL;
	
	_bManual:                   BOOL;//  手动上料

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[_station REF= G_arrStation[E_Station.Steering];
_station.arrName[E_Language.Chinese]:="转向站";
_station.arrName[E_Language.Vietnamese]:="Quay về vị trí";
_bEnable:=NOT GVL.stSetting.arrStationShield[E_Station.Steering];
A_Home();
A_Auto();

_bManual:=GVL.stSetting.bManualLoad ;

]]></ST>
    </Implementation>
    <Action Name="A_Auto" Id="{7b9a7775-e8af-4379-9afd-51a2a7cb4b4c}">
      <Implementation>
        <ST><![CDATA[CASE _station.iStepNow OF
	1000:
		_station.arrInfo[E_Language.Chinese]:="初始化完成等待启动";
		IF  _bEnable THEN
			_station.iStepNext:=1101;
		END_IF
	1101:
		_station.arrInfo[E_Language.Chinese]:="判断是否有料";
		IF NOT GVL.I.bSteeringCheck1 THEN
			_station.iStepNext:=SEL(_bManual,1201,1551);
		END_IF
	1201:
		_station.arrInfo[E_Language.Chinese]:="请求放料";
		GVL.stHandshake.bSteering:=TRUE;
		IF GVL.stHandshake.bSteeringOk THEN
			_station.iStepNext:=1301;
		END_IF
	1301:
	     _station.arrInfo[E_Language.Chinese]:="检测物料是否到转向站";
		 GVL.stOverTime.bSteeringCheck1:=TRUE;
	    IF GVL.I.bSteeringCheck1 THEN
			GVL.stOverTime.bSteeringCheck1:=FALSE;
			_station.iStepNext:=1311;
		END_IF
	1311:
		_station.arrInfo[E_Language.Chinese]:="复位放料请求";
		GVL.stHandshake.bSteering:=FALSE;
		IF NOT  GVL.stHandshake.bSteeringOk THEN
			_station.iStepNext:=1351;
		END_IF
	1351:
		_station.arrInfo[E_Language.Chinese]:="限位气缸缩回";
		IF  G_arrFbCylinder[E_Cylinder.SteeringAcquireLimit].M_HomeRequest() THEN
			_station.iStepNext:=1401;
		END_IF
	1401:
		_station.arrInfo[E_Language.Chinese]:="顶升气缸伸出";
		IF M_LiftWork() THEN
			_station.iStepNext:=1451;
	    END_IF
	1451:
		_station.arrInfo[E_Language.Chinese]:="接驳升降气缸缩回";
		CASE GVL_Data.stRecipe.eMachineType OF
			E_MachineType._367:
				IF  G_arrFbCylinder[E_Cylinder.SteeringAcquireElevator].M_HomeRequest() THEN
					_station.iStepNext:=1501;
		    	END_IF
			ELSE
				_station.iStepNext:=1501;
		END_CASE
	1501:
		_station.arrInfo[E_Language.Chinese]:="旋转气缸动作";
		IF M_RotateWork() THEN
			_station.iStepNext:=1551;
		END_IF
	1551:
		_station.arrInfo[E_Language.Chinese]:="等待解锁站请求放料";
		IF GVL.stHandshake.bOpenToSteering THEN
			GVL.stHandshake.bSteeringToOpen:=TRUE;
			_station.iStepNext:=SEL(_bManual,1561,1651);
		END_IF
	1561:
		_station.arrInfo[E_Language.Chinese]:="接驳升降气缸缩回";
        IF  G_arrFbCylinder[E_Cylinder.SteeringAcquireElevator].M_HomeRequest() THEN
			_station.iStepNext:=1601;
		END_IF
	1601:
		_station.arrInfo[E_Language.Chinese]:="顶升气缸缩回";
		IF M_LiftHome() THEN
			_station.iStepNext:=1651;
		END_IF
	1651:
		_station.arrInfo[E_Language.Chinese]:="等待复位放料请求";
		IF NOT GVL.stHandshake.bOpenToSteering THEN
			GVL.stHandshake.bSteeringToOpen:=FALSE;
			_station.iStepNext:=SEL(_bManual,1655,1101);
		END_IF
	1655:
		CASE GVL_Data.stRecipe.eMachineType OF
			E_MachineType._311:
				_station.iStepNext:=1661;
			E_MachineType._367:	
				GVL.stHandshake.bSteering:=TRUE;
				_station.iStepNext:=1701;		
			ELSE
				_station.iStepNext:=1701;
		END_CASE
	1661:
		_station.arrInfo[E_Language.Chinese]:="顶升气缸伸出";
		IF M_LiftWork() THEN
			_station.iStepNext:=1671;
		END_IF
	1671:
		_station.arrInfo[E_Language.Chinese]:="旋转气缸复位";
		IF M_RotateHome() THEN
			_station.iStepNext:=1681;
		END_IF
	1681:
		_station.arrInfo[E_Language.Chinese]:="顶升气缸缩回";
		IF M_LiftHome() THEN
			_station.iStepNext:=1701;
		END_IF
	1701:
		_station.arrInfo[E_Language.Chinese]:="接驳升降气缸伸出 限位气缸伸出";
		IF G_arrFbCylinder[E_Cylinder.SteeringAcquireElevator].M_WorkRequest() and G_arrFbCylinder[E_Cylinder.SteeringAcquireLimit].M_WorkRequest() THEN
			_station.iStepNext:=1901;
		END_IF
	1901:
		_station.arrInfo[E_Language.Chinese]:="旋转气缸复位"; 
		IF M_RotateHome() THEN
			_station.iStepNext:=SEL(GVL_Data.stRecipe.eMachineType=E_MachineType._367,1101,1201);
		END_IF
END_CASE]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Home" Id="{803228b4-e8c6-4d9a-9ff3-080242ba511e}">
      <Implementation>
        <ST><![CDATA[CASE _station.iStepNow OF
	0:
		_station.arrInfo[E_Language.Chinese]:="等待初始化";
		_station.iStepNext:=SEL(_bEnable,1000,100);
	100:
	    IF GVL_Data.stRecipe.eMachineType = E_MachineType._367 THEN
			_station.iStepNext:=150;
			ELSE
				_station.iStepNext:=450;
		END_IF
	150:
		_station.arrInfo[E_Language.Chinese]:="顶升气缸伸出";
		    IF G_arrFbCylinder[E_Cylinder.SteeringLift].M_WorkRequest() THEN
		     	_station.iStepNext:=200;
		    END_IF
		
	200:
		_station.arrInfo[E_Language.Chinese]:="接驳升降气缸缩回";
		IF G_arrFbCylinder[E_Cylinder.SteeringAcquireElevator].M_HomeRequest()  THEN
			_station.iStepNext:=300;
		END_IF
	
	300:
		_station.arrInfo[E_Language.Chinese]:="旋转气缸复位";
		IF G_arrFbCylinder[E_Cylinder.SteeringRotate].M_HomeRequest() THEN
			_station.iStepNext:=400;
		END_IF
	400:
		_station.arrInfo[E_Language.Chinese]:="顶升气缸缩回";
		IF G_arrFbCylinder[E_Cylinder.SteeringLift].M_HomeRequest() THEN
			_station.iStepNext:=450;
		END_IF
	450:
		IF NOT _bManual THEN
			_station.iStepNext:=500;
		ELSE
			_station.iStepNext:=700;
		END_IF
	500:
		_station.arrInfo[E_Language.Chinese]:="接驳升降气缸伸出";
		IF G_arrFbCylinder[E_Cylinder.SteeringAcquireElevator].M_WorkRequest()  THEN
			_station.iStepNext:=600;
		END_IF
	600:
		_station.arrInfo[E_Language.Chinese]:="限位气缸伸出";
		IF  G_arrFbCylinder[E_Cylinder.SteeringAcquireLimit].M_WorkRequest() THEN
			_station.iStepNext:=1000;
		END_IF
		
		
	700:
	    _station.arrInfo[E_Language.Chinese]:="接驳升降气缸缩回";
		IF G_arrFbCylinder[E_Cylinder.SteeringAcquireElevator].M_HomeRequest()  THEN
			_station.iStepNext:=800;
		END_IF
	800:
	    _station.arrInfo[E_Language.Chinese]:="限位气缸缩回";
		IF  G_arrFbCylinder[E_Cylinder.SteeringAcquireLimit].M_HomeRequest() THEN
			_station.iStepNext:=1000;
		END_IF
		
	
END_CASE]]></ST>
      </Implementation>
    </Action>
    <Method Name="M_LiftHome" Id="{8778b48b-bf5b-4c86-b032-aca7c9029161}">
      <Declaration><![CDATA[METHOD M_LiftHome : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE GVL_Data.stRecipe.eMachineType OF
	E_MachineType._367:
		M_LiftHome:=G_arrFbCylinder[E_Cylinder.SteeringLift].M_HomeRequest();
	ELSE
		M_LiftHome:=TRUE;		
END_CASE
]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_LiftWork" Id="{e73398ad-3360-46c1-895d-31f4b28af1e9}">
      <Declaration><![CDATA[METHOD M_LiftWork : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE GVL_Data.stRecipe.eMachineType OF
	E_MachineType._367:	
		M_LiftWork:=G_arrFbCylinder[E_Cylinder.SteeringLift].M_WorkRequest();
	ELSE
		M_LiftWork:=TRUE;
END_CASE
]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_RotateHome" Id="{d5b046e8-f20b-4807-b11f-ab208745fe61}">
      <Declaration><![CDATA[METHOD M_RotateHome : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE GVL_Data.stRecipe.eMachineType OF
	E_MachineType._367:
		M_RotateHome:=G_arrFbCylinder[E_Cylinder.SteeringRotate].M_HomeRequest();
	ELSE
		M_RotateHome:=TRUE;	
END_CASE
]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_RotateWork" Id="{61c74134-83fd-46af-a6f0-07f28dc8dc64}">
      <Declaration><![CDATA[METHOD M_RotateWork : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE GVL_Data.stRecipe.eMachineType OF
	E_MachineType._367:
		M_RotateWork:=G_arrFbCylinder[E_Cylinder.SteeringRotate].M_WorkRequest();
	ELSE
		M_RotateWork:=TRUE;
END_CASE
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="P_StationSteering">
      <LineId Id="14" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="6" Count="0" />
    </LineIds>
    <LineIds Name="P_StationSteering.A_Auto">
      <LineId Id="1" Count="1" />
      <LineId Id="4" Count="0" />
      <LineId Id="65" Count="2" />
      <LineId Id="6" Count="2" />
      <LineId Id="11" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="12" Count="2" />
      <LineId Id="16" Count="3" />
      <LineId Id="205" Count="0" />
      <LineId Id="236" Count="0" />
      <LineId Id="206" Count="0" />
      <LineId Id="237" Count="0" />
      <LineId Id="207" Count="0" />
      <LineId Id="204" Count="0" />
      <LineId Id="208" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="22" Count="3" />
      <LineId Id="75" Count="0" />
      <LineId Id="77" Count="2" />
      <LineId Id="76" Count="0" />
      <LineId Id="26" Count="1" />
      <LineId Id="134" Count="1" />
      <LineId Id="132" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="248" Count="0" />
      <LineId Id="238" Count="0" />
      <LineId Id="240" Count="0" />
      <LineId Id="244" Count="1" />
      <LineId Id="243" Count="0" />
      <LineId Id="246" Count="1" />
      <LineId Id="241" Count="0" />
      <LineId Id="31" Count="4" />
      <LineId Id="85" Count="0" />
      <LineId Id="87" Count="3" />
      <LineId Id="86" Count="0" />
      <LineId Id="151" Count="0" />
      <LineId Id="155" Count="0" />
      <LineId Id="198" Count="0" />
      <LineId Id="156" Count="1" />
      <LineId Id="36" Count="4" />
      <LineId Id="102" Count="0" />
      <LineId Id="224" Count="0" />
      <LineId Id="230" Count="2" />
      <LineId Id="103" Count="0" />
      <LineId Id="124" Count="2" />
      <LineId Id="128" Count="0" />
      <LineId Id="249" Count="2" />
      <LineId Id="129" Count="1" />
      <LineId Id="127" Count="0" />
      <LineId Id="108" Count="0" />
      <LineId Id="111" Count="2" />
      <LineId Id="110" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="116" Count="2" />
      <LineId Id="115" Count="0" />
      <LineId Id="119" Count="0" />
      <LineId Id="121" Count="2" />
      <LineId Id="120" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="92" Count="2" />
      <LineId Id="91" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="95" Count="1" />
      <LineId Id="253" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="3" Count="0" />
    </LineIds>
    <LineIds Name="P_StationSteering.A_Home">
      <LineId Id="7" Count="1" />
      <LineId Id="3" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="85" Count="1" />
      <LineId Id="82" Count="0" />
      <LineId Id="84" Count="0" />
      <LineId Id="78" Count="2" />
      <LineId Id="76" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="56" Count="4" />
      <LineId Id="55" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="52" Count="2" />
      <LineId Id="51" Count="0" />
      <LineId Id="71" Count="2" />
      <LineId Id="70" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="98" Count="4" />
      <LineId Id="97" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="38" Count="2" />
      <LineId Id="20" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="42" Count="2" />
      <LineId Id="41" Count="0" />
      <LineId Id="117" Count="1" />
      <LineId Id="103" Count="0" />
      <LineId Id="106" Count="1" />
      <LineId Id="116" Count="0" />
      <LineId Id="105" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="111" Count="0" />
      <LineId Id="115" Count="0" />
      <LineId Id="113" Count="0" />
      <LineId Id="110" Count="0" />
      <LineId Id="109" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="32" Count="0" />
    </LineIds>
    <LineIds Name="P_StationSteering.M_LiftHome">
      <LineId Id="7" Count="3" />
      <LineId Id="16" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="6" Count="0" />
    </LineIds>
    <LineIds Name="P_StationSteering.M_LiftWork">
      <LineId Id="7" Count="1" />
      <LineId Id="16" Count="0" />
      <LineId Id="10" Count="2" />
      <LineId Id="6" Count="0" />
    </LineIds>
    <LineIds Name="P_StationSteering.M_RotateHome">
      <LineId Id="7" Count="3" />
      <LineId Id="16" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="6" Count="0" />
    </LineIds>
    <LineIds Name="P_StationSteering.M_RotateWork">
      <LineId Id="6" Count="3" />
      <LineId Id="15" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>